--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test:x-api": "node scripts/test-x-api.js",
+    "test:ethos-api": "node scripts/test-ethos-api.js"
   },
   "dependencies": {
     "axios": "^1.5.0",
