--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "ethos-connect": "^0.0.194",
+    "lucide-react": "^0.542.0",
     "next": "^14.2.32",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
