--- a/data/seasons-cache.json
+++ b/data/seasons-cache.json
@@ -1,90 +1,96 @@
 {
-  "timestamp": 1756956087864,
+  "timestamp": 1757144741029,
   "data": {
     "totalSeasons": 2,
     "currentSeason": {
       "id": 1,
       "name": "Season 1",
       "startDate": "2025-05-14T00:00:00.000Z",
-      "week": 11
+      "week": 12
     },
     "seasonStats": [
       {
         "seasonId": 1,
         "seasonName": "Season 1",
-        "totalWeeks": 12,
+        "totalWeeks": 13,
         "startDate": "2025-05-14T00:00:00.000Z",
         "weeks": [
           {
-            "startDate": "2024-07-14T00:00:00.000Z",
+            "startDate": "2025-05-07T00:00:00.000Z",
             "xpDistributed": 64199239,
             "participants": 5425
           },
           {
             "week": 1,
-            "startDate": "2024-07-21T00:00:00.000Z",
+            "startDate": "2025-05-14T00:00:00.000Z",
             "xpDistributed": 14402827,
             "participants": 4565
           },
           {
             "week": 2,
-            "startDate": "2024-07-28T00:00:00.000Z",
+            "startDate": "2025-05-21T00:00:00.000Z",
             "xpDistributed": 19189872,
             "participants": 6093
           },
           {
             "week": 3,
-            "startDate": "2024-08-04T00:00:00.000Z",
+            "startDate": "2025-05-28T00:00:00.000Z",
             "xpDistributed": 17663896,
             "participants": 6990
           },
           {
             "week": 4,
-            "startDate": "2024-08-11T00:00:00.000Z",
+            "startDate": "2025-06-04T00:00:00.000Z",
             "xpDistributed": 16590928,
             "participants": 6511
           },
           {
             "week": 5,
-            "startDate": "2024-08-18T00:00:00.000Z",
+            "startDate": "2025-06-11T00:00:00.000Z",
             "xpDistributed": 16699783,
             "participants": 8255
           },
           {
             "week": 6,
-            "startDate": "2024-08-25T00:00:00.000Z",
+            "startDate": "2025-06-18T00:00:00.000Z",
             "xpDistributed": 16285924,
             "participants": 7943
           },
           {
             "week": 7,
-            "startDate": "2024-09-01T00:00:00.000Z",
+            "startDate": "2025-06-25T00:00:00.000Z",
             "xpDistributed": 15754650,
             "participants": 7472
           },
           {
             "week": 8,
-            "startDate": "2024-09-08T00:00:00.000Z",
+            "startDate": "2025-07-02T00:00:00.000Z",
             "xpDistributed": 14868568,
             "participants": 6975
           },
           {
             "week": 9,
-            "startDate": "2024-09-15T00:00:00.000Z",
+            "startDate": "2025-07-09T00:00:00.000Z",
             "xpDistributed": 19712612,
             "participants": 5358
           },
           {
             "week": 10,
-            "startDate": "2024-09-22T00:00:00.000Z",
+            "startDate": "2025-07-16T00:00:00.000Z",
             "xpDistributed": 16729772,
             "participants": 3996
           },
           {
             "week": 11,
-            "startDate": "2024-09-29T00:00:00.000Z",
+            "startDate": "2025-07-23T00:00:00.000Z",
             "xpDistributed": 13703003,
             "participants": 2498
+          },
+          {
+            "week": 12,
+            "startDate": "2025-07-30T00:00:00.000Z",
+            "xpDistributed": 27593910,
+            "participants": 1991
           }
         ]
       },
@@ -95,8 +101,8 @@
         "startDate": "2025-01-01T00:00:00.000Z",
         "weeks": [
           {
-            "startDate": "2024-09-29T00:00:00.000Z",
-            "xpDistributed": 341615590,
+            "startDate": "2025-01-25T00:00:00.000Z",
+            "xpDistributed": 341614240,
             "participants": 6850
           }
         ]
